@@ -1,6 +1,7 @@
 Changes in Version 0.1.5
 ========================
 plot
+ - add function "add_logo" to utils: put an image in one corner of a figure
  - add function "annotate_xaxis" to utils: add text in line with x tickmarks
  - add function "collapse_vertical" to utils: remove space between two subplots
  - add function "shared_ylabel" to utils: span a y-axis label across subplots
